--- a/src/main/resources/templates/minesweeper.html
+++ b/src/main/resources/templates/minesweeper.html
@@ -1,12 +1,16 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org" lang="sk">
+<html
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorate="~{layout/layoutGamestudio.html}"
+        lang="sk">
 <head>
-    <meta charset="UTF-8" />
+<!--    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Stefan Korecko" />
     <link rel="stylesheet"
           href="/css/mines.css"
-          media="screen" />
+          media="screen" />-->
 
 
     <title>GameStudio - Minesweeper</title>
@@ -14,52 +18,55 @@
 
 <body>
 
-<h2>Minesweeper</h2>
+<main layout:fragment="content">
 
-<div class="minesControl">
-    <span th:text="${gameStatus}"></span>
-    <a th:if="${marking and isPlaying}"  class="abutton" href="/minesweeper/mark">Na otváranie.</a>
-    <a th:if=" ${not marking and isPlaying}" class="abutton" href="/minesweeper/mark">Na označovanie.</a>
+    <h2>Minesweeper</h2>
 
-
-    <a  class="abutton" href="/minesweeper/new">Nová hra</a>
-
-</div>
-
-<section>
-    <table class='minefield'>
-        <tr th:each="row: ${minesweeperField}">
-            <td th:each="tile: ${row}"
-                th:attr="class=${@minesweeperController.getTileClass(tile)}">
-                <a th:if="${isPlaying}" th:attr="href='/minesweeper?row='+${rowStat.index}+'&column='+${tileStat.index}">
-                    <span th:text="${@minesweeperController.getTileText(tile)}"></span>
-                </a>
-
-                <span th:if="not ${isPlaying}" th:text="${@minesweeperController.getTileText(tile)}"></span>
-
-            </td>
-        </tr>
-    </table>
-</section>
+    <div class="minesControl">
+        <span th:text="${gameStatus}"></span>
+        <a th:if="${marking and isPlaying}"  class="abutton" href="/minesweeper/mark">Na otváranie.</a>
+        <a th:if=" ${not marking and isPlaying}" class="abutton" href="/minesweeper/mark">Na označovanie.</a>
 
 
-<section>
-    <h3>Najlepšie skóre</h3>
-    <table class="scores">
-        <tr>
-            <th>Poradie</th>
-            <th>Meno</th>
-            <th>Body</th>
-            <th>Dátum a čas hry</th>
-        </tr>
-        <tr th:each="score: ${bestScores}">
-            <td th:text="${scoreStat.index+1}"></td>
-            <td th:text="${score.username}"></td>
-            <td th:text="${score.points}"></td>
-            <td th:text="${score.playedOn}"></td>
-        </tr>
-    </table>
-</section>
+        <a  class="abutton" href="/minesweeper/new">Nová hra</a>
+
+    </div>
+
+    <section>
+        <table class='minefield'>
+            <tr th:each="row: ${minesweeperField}">
+                <td th:each="tile: ${row}"
+                    th:attr="class=${@minesweeperController.getTileClass(tile)}">
+                    <a th:if="${isPlaying}" th:attr="href='/minesweeper?row='+${rowStat.index}+'&column='+${tileStat.index}">
+                        <span th:text="${@minesweeperController.getTileText(tile)}"></span>
+                    </a>
+
+                    <span th:if="not ${isPlaying}" th:text="${@minesweeperController.getTileText(tile)}"></span>
+
+                </td>
+            </tr>
+        </table>
+    </section>
+
+
+    <section>
+        <h3>Najlepšie skóre</h3>
+        <table class="scores">
+            <tr>
+                <th>Poradie</th>
+                <th>Meno</th>
+                <th>Body</th>
+                <th>Dátum a čas hry</th>
+            </tr>
+            <tr th:each="score: ${bestScores}">
+                <td th:text="${scoreStat.index+1}"></td>
+                <td th:text="${score.username}"></td>
+                <td th:text="${score.points}"></td>
+                <td th:text="${score.playedOn}"></td>
+            </tr>
+        </table>
+    </section>
+</main>
 
 
 </body>
