--- a/src/main/resources/templates/minesweeper.html
+++ b/src/main/resources/templates/minesweeper.html
@@ -13,7 +13,7 @@
           media="screen" />-->
 
 
-    <title>GameStudio - Minesweeper</title>
+    <title>Gamestudio - Minesweeper</title>
 </head>
 
 <body>
