--- a/src/main/resources/templates/layout/layoutGamestudio.html
+++ b/src/main/resources/templates/layout/layoutGamestudio.html
@@ -5,7 +5,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="author" content="Stefan Korecko" />
   <link rel="stylesheet"
         href="/css/gamestudio.css"
