--- a/src/main/resources/templates/gamestudio.html
+++ b/src/main/resources/templates/gamestudio.html
@@ -11,7 +11,9 @@
 <body>
     <main layout:fragment="content">
 
-        <form action="/login" method="post">
+        <!--/*@thymesVar id="userController" type="sk.tuke.gamestudio.server.controller.UserController"*/-->
+
+        <form th:if="not ${@userController.logged}" action="/login" method="post">
             <label for="login">Meno: </label> <input id="login" type="text" name="login" required/> <br />
             <label for="pass">Heslo: </label> <input id="pass" type="password" name="password" required/> <br />
             <button type="submit">Prihlásiť sa</button>
