Asynchronna verzia minesweeper, zatial iba nacitanie score cez AJAX, vypis do konzoly.

--- a/src/main/resources/templates/gamestudio.html
+++ b/src/main/resources/templates/gamestudio.html
@@ -21,6 +21,7 @@
         <h2>Hry</h2>
         <ul>
             <li><a href="/minesweeper">Minesweeper</a></li>
+            <li><a href="/minesweeper/asynch">Minesweeper (asynch. mód)</a></li>
         </ul>
     </main>
 </body>
